refactor: Overhaul UnsafeUtil with MemoryAccessor hierarchy and VarHandle fallback